WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179148
[Win] Fix compile errors in MediaPlayerPrivateAVFoundationCF.cpp
https://bugs.webkit.org/show_bug.cgi?id=179148
Summary
[Win] Fix compile errors in MediaPlayerPrivateAVFoundationCF.cpp
Per Arne Vollan
Reported
2017-11-01 19:13:59 PDT
MediaPlayerPrivateAVFoundationCF.cpp(1116): error C2664: 'void WebCore::MediaPlayerPrivateAVFoundation::setResolvedURL(WebCore::URL &&)': cannot convert argument 1 from 'WTF::RetainPtr<CFURLRef>' to 'WebCore::URL &&'
Attachments
Patch
(1.80 KB, patch)
2017-11-01 19:22 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-11-01 19:22:57 PDT
Created
attachment 325664
[details]
Patch
Per Arne Vollan
Comment 2
2017-11-01 19:29:36 PDT
Comment on
attachment 325664
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 3
2017-11-01 20:00:11 PDT
Comment on
attachment 325664
[details]
Patch Clearing flags on attachment: 325664 Committed
r224311
: <
https://trac.webkit.org/changeset/224311
>
WebKit Commit Bot
Comment 4
2017-11-01 20:00:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-11-15 12:24:54 PST
<
rdar://problem/35567477
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug