[Win] Fix compile errors in MediaPlayerPrivateAVFoundationCF.cpp https://bugs.webkit.org/show_bug.cgi?id=179148

Reviewed by Ryosuke Niwa.

* platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
(WebCore::MediaPlayerPrivateAVFoundationCF::resolvedURLChanged):


Canonical link: https://commits.webkit.org/195258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224311 268f45cc-cd09-0410-ab3c-d52691b4dbfc